Resolucion del inciso 10.2

--- a/Practica 2/ejercicio10.ipynb
+++ b/Practica 2/ejercicio10.ipynb
@@ -74,6 +74,23 @@
     "player_stats = c.generar_estructura(clean_names,goals,goals_avoided,assists)\n",
     "print(player_stats)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Llamo a la funcion goleador dentro del modulo calculadora, le paso como parametro la estructura generada anteriormente, y esta me devuelve una tupla con nombre y cantidad de goles del goleador, y lo almaceno en la variable jugador_goleador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jugador_goleador = c.goleador(player_stats)\n",
+    "print(f'El jugador con mas goles es {jugador_goleador[0]} e hizo {jugador_goleador[1]} goles')"
+   ]
   }
  ],
  "metadata": {
