TP 2: resolucion del inciso 10.3

--- a/Practica 2/ejercicio10.ipynb
+++ b/Practica 2/ejercicio10.ipynb
@@ -91,6 +91,22 @@
     "jugador_goleador = c.goleador(player_stats)\n",
     "print(f'El jugador con mas goles es {jugador_goleador[0]} e hizo {jugador_goleador[1]} goles')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Llamo a la funcion mas_influyente del modulo calculadora, le paso como parametro la estructura generada en el primer inciso e imprime el nombre del jugador mas influyente del partido, en base a los criterios establecidos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'jugador mas influyente es {c.mas_influyente(player_stats)}')"
+   ]
   }
  ],
  "metadata": {
