TP 2: resolucion del inciso 10.4

--- a/Practica 2/ejercicio10.ipynb
+++ b/Practica 2/ejercicio10.ipynb
@@ -107,6 +107,22 @@
    "source": [
     "print(f'jugador mas influyente es {c.mas_influyente(player_stats)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Llamo a la funcion promedio_goles del modulo calculadora, le paso como parametro la lista de goles proporcionada e imprimo el promedio de goles por partido"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'El promedio de goles es: {c.promedio_goles(goals)}')"
+   ]
   }
  ],
  "metadata": {
