TP 2: resolucion del inciso 10.5

--- a/Practica 2/ejercicio10.ipynb
+++ b/Practica 2/ejercicio10.ipynb
@@ -123,6 +123,22 @@
    "source": [
     "print(f'El promedio de goles es: {c.promedio_goles(goals)}')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Llamo a la funcion promedio_goleador del modulo calculadora, pasandole como parametro el segundo elemento de jugador_goleador que contiene la cantidad de goles del goleador, e imprime el promedio de goles por partido del goleador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'el promedio de goles por partido del goleador fue {c.promedio_goleador(jugador_goleador[1])}')"
+   ]
   }
  ],
  "metadata": {
